--- a/dashboard.html
+++ b/dashboard.html
@@ -370,6 +370,12 @@ select option{color:var(–charcoal)!important}
     </div>
   </div>
   <div class="fg"><label class="fl">Notes</label><input type="text" class="fi" id="c-notes" placeholder="Optional notes..."></div>
+  <div class="fg">
+    <label class="fl">Files <span style="font-weight:400;color:var(--lmuted);text-transform:none;letter-spacing:0">(photos or PDFs)</span></label>
+    <input type="file" accept="image/*,.pdf" multiple id="c-files" style="width:100%;padding:8px 0;font-size:13px;color:var(--muted)">
+    <div id="c-files-preview" style="margin-top:8px;display:flex;flex-wrap:wrap;gap:8px"></div>
+    <div id="c-files-existing" style="margin-top:8px"></div>
+  </div>
   <div class="modal-btns" id="edit-client-btns" style="display:none">
     <button class="b-cancel" onclick="closeModal('client')">Cancel</button>
     <button class="b-save" id="save-client-btn" onclick="saveClient()">Save Client</button>
@@ -950,7 +956,7 @@ function renderInvoices(){
   const fmt=d=>d?new Date(d+'T00:00:00').toLocaleDateString('en-US',{month:'short',day:'numeric',year:'numeric'}):'—';
   const tbl=`<table class="tbl desktop-table"><thead><tr><th>Client</th><th>Amount</th><th>Date</th><th>Status</th><th></th></tr></thead><tbody>`+
     invoices.map(i=>`<tr>
-      <td><strong>${i.clients?.name||'?'}</strong></td><td><strong>$${(i.amount||0).toLocaleString()}</strong></td>
+      <td><strong style="cursor:pointer;color:var(--green)" onclick="showClientDetailByName('${i.clients?.name||''}')"> ${i.clients?.name||'?'}</strong></td><td><strong>$${(i.amount||0).toLocaleString()}</strong></td>
       <td>${fmt(i.issued_date)}</td><td>${ibadge(i.status)}</td>
       <td><div class="row-actions">
         ${i.status!=='paid'?`<button class="act-btn act-paid" onclick="markPaid('${i.id}')">✓ Paid</button>`:''}
@@ -960,7 +966,7 @@ function renderInvoices(){
       </div></td>
     </tr>`).join('')+`</tbody></table>`;
   const cards=invoices.map(i=>`<div class="m-card">
-    <div class="m-card-top"><div class="m-card-name">${i.clients?.name||'?'}</div><div class="m-card-amount">$${(i.amount||0).toLocaleString()}</div></div>
+    <div class="m-card-top"><div class="m-card-name" style="cursor:pointer;color:var(--green)" onclick="showClientDetailByName('${i.clients?.name||''}')"> ${i.clients?.name||'?'}</div><div class="m-card-amount">$${(i.amount||0).toLocaleString()}</div></div>
     <div class="m-card-meta">${fmt(i.issued_date||i.created_at)}${i.notes?' · '+i.notes:''}</div>
     ${i.photo_url?`<div style='margin-top:6px;position:relative' onclick="openPhoto('${i.photo_url}','${(i.clients?.name||'').replace(/'/g,'')} · Invoice')"><img src='${i.photo_url}' style='width:100%;border-radius:8px;max-height:150px;object-fit:cover;cursor:pointer'><div style='position:absolute;bottom:6px;right:6px;background:rgba(0,0,0,0.5);color:white;font-size:10px;padding:3px 7px;border-radius:4px;font-family:DM Sans,sans-serif'>Tap to expand</div></div>`:''}
     <div class="m-card-tags" style="display:flex;align-items:center;gap:6px">${ibadge(i.status)}${i.photo_url?'<span style="font-size:14px" title="Has photo">📎</span>':''}</div>
@@ -998,6 +1004,23 @@ function editClient(id){
   document.getElementById('c-surface').value=c.surface||'';
   document.getElementById('c-courts').value=c.courts||1;
   document.getElementById('c-notes').value=c.notes||'';
+  clientFiles=[];
+  const cfi=document.getElementById('c-files');if(cfi)cfi.value='';
+  const cfp=document.getElementById('c-files-preview');if(cfp)cfp.innerHTML='';
+  const cfe=document.getElementById('c-files-existing');
+  if(cfe){
+    const existingFiles=JSON.parse(c.files||'[]');
+    cfe.dataset.files=JSON.stringify(existingFiles);
+    if(existingFiles.length){
+      cfe.innerHTML='<div style="font-size:10px;font-weight:700;text-transform:uppercase;color:var(--lmuted);margin-bottom:6px">Existing files</div>'+
+        existingFiles.map((f,idx)=>f.type&&f.type.startsWith('image/')?
+          `<div style="position:relative;display:inline-block;margin-right:8px;margin-bottom:8px"><img src="${f.data}" style="width:72px;height:72px;object-fit:cover;border-radius:8px;border:1px solid var(--border);cursor:pointer" onclick="openPhoto('${f.data}','${f.name}')"><button onclick="removeClientFile(${idx})" style="position:absolute;top:-4px;right:-4px;background:#e53;color:white;border:none;border-radius:50%;width:18px;height:18px;font-size:10px;cursor:pointer;line-height:18px;text-align:center">✕</button></div>`:
+          `<div style="background:var(--off);border:1px solid var(--border);border-radius:8px;padding:8px 12px;font-size:11px;color:var(--charcoal);font-weight:600;display:inline-flex;align-items:center;gap:8px;margin-right:8px;margin-bottom:8px"><a href="${f.data}" download="${f.name}" style="color:var(--charcoal);text-decoration:none">📄 ${f.name}</a><button onclick="removeClientFile(${idx})" style="background:none;border:none;color:#e53;cursor:pointer;font-size:12px">✕</button></div>`
+        ).join('');
+    } else {
+      cfe.innerHTML='';
+    }
+  }
   document.getElementById('save-client-btn').textContent='Save Changes';
   document.getElementById('m-client').classList.add('open');
 }
@@ -1045,10 +1068,32 @@ function editInvoice(id){
 }
 
 // ── QUICK ADD STATE ──
-let qaMode=false, qaClientId=null, qaJobSaved=false, invoicePhotoUrl=null, pendingCompleteJobId=null;
+let qaMode=false, qaClientId=null, qaJobSaved=false, invoicePhotoUrl=null, pendingCompleteJobId=null, clientFiles=[];
 
 // Photo preview
 document.addEventListener('DOMContentLoaded',()=>{
+  // Client file uploads
+  const cFilesInput=document.getElementById('c-files');
+  if(cFilesInput){
+    cFilesInput.addEventListener('change',async function(){
+      const preview=document.getElementById('c-files-preview');
+      preview.innerHTML='';
+      clientFiles=[];
+      for(const file of this.files){
+        const b64=await new Promise(res=>{
+          const r=new FileReader();
+          r.onload=e=>res(e.target.result);
+          r.readAsDataURL(file);
+        });
+        clientFiles.push({name:file.name,type:file.type,data:b64});
+        if(file.type.startsWith('image/')){
+          preview.innerHTML+=`<div style="position:relative"><img src="${b64}" style="width:72px;height:72px;object-fit:cover;border-radius:8px;border:1px solid var(--border)"></div>`;
+        } else {
+          preview.innerHTML+=`<div style="background:var(--off);border:1px solid var(--border);border-radius:8px;padding:8px 12px;font-size:11px;color:var(--charcoal);font-weight:600">📄 ${file.name}</div>`;
+        }
+      }
+    });
+  }
   const photoInput=document.getElementById('i-photo');
   if(photoInput){
     photoInput.addEventListener('change',function(){
@@ -1662,6 +1707,23 @@ function openPhoto(url, caption){
   document.getElementById('photo-viewer-caption').textContent=caption||'';
   document.getElementById('photo-viewer').style.display='flex';
   event.stopPropagation();
+}
+function removeClientFile(idx){
+  const cfe=document.getElementById('c-files-existing');
+  if(!cfe)return;
+  const files=JSON.parse(cfe.dataset.files||'[]');
+  files.splice(idx,1);
+  cfe.dataset.files=JSON.stringify(files);
+  // Re-render
+  if(files.length){
+    cfe.innerHTML='<div style="font-size:10px;font-weight:700;text-transform:uppercase;color:var(--lmuted);margin-bottom:6px">Existing files</div>'+
+      files.map((f,i)=>f.type&&f.type.startsWith('image/')?
+        `<div style="position:relative;display:inline-block;margin-right:8px"><img src="${f.data}" style="width:72px;height:72px;object-fit:cover;border-radius:8px;cursor:pointer" onclick="openPhoto('${f.data}','${f.name}')"><button onclick="removeClientFile(${i})" style="position:absolute;top:-4px;right:-4px;background:#e53;color:white;border:none;border-radius:50%;width:18px;height:18px;font-size:10px;cursor:pointer">✕</button></div>`:
+        `<div style="background:var(--off);border:1px solid var(--border);border-radius:8px;padding:8px 12px;font-size:11px;display:inline-flex;align-items:center;gap:8px;margin-right:8px"><a href="${f.data}" download="${f.name}" style="color:var(--charcoal);text-decoration:none">📄 ${f.name}</a><button onclick="removeClientFile(${i})" style="background:none;border:none;color:#e53;cursor:pointer">✕</button></div>`
+      ).join('');
+  } else {
+    cfe.innerHTML='';
+  }
 }
 function showClientDetailByName(name){
   const c=clients.find(x=>x.name===name);
